blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/Fee_Instalment__c.object-meta.xml
<CustomObject>
    <description>One scheduled payment of a search's retained fee, such as the first third at engagement. Tracks when it falls due, is invoiced and is paid.</description>
    <label>Fee instalment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee instalments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>