blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The instalment amount before tax and expenses.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>