blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <description>The date the instalment may be invoiced. Empty until the trigger happens.</description>
    <label>Due date</label>
    <type>Date</type>
</CustomField>