blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/fields/Instalment_number__c.field-meta.xml
<CustomField>
    <fullName>Instalment_number__c</fullName>
    <description>Position of this instalment in the fee schedule, starting at 1.</description>
    <label>Instalment number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>