blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/fields/Invoice_reference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_reference__c</fullName>
    <description>The invoice number in the finance system. Matches CRM to the ledger.</description>
    <label>Invoice reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>