blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/fields/Search__c.field-meta.xml
<CustomField>
    <fullName>Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lists the fee schedule for the search.</description>
    <label>Search</label>
    <referenceTo>Search__c</referenceTo>
    <relationshipLabel>Fee instalments</relationshipLabel>
    <relationshipName>Fee_instalments</relationshipName>
    <type>Lookup</type>
</CustomField>