blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <description>The event or date that makes this instalment due.</description>
    <label>Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On engagement</fullName>
            </value>
            <value>
                <fullName>On shortlist presented</fullName>
            </value>
            <value>
                <fullName>On placement</fullName>
            </value>
            <value>
                <fullName>On a set date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>