blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/fields/Waiver_reason__c.field-meta.xml
<CustomField>
    <fullName>Waiver_reason__c</fullName>
    <description>Why the instalment was cancelled or waived. Required on the waived stage.</description>
    <label>Waiver reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Search cancelled early</fullName>
            </value>
            <value>
                <fullName>Commercial concession</fullName>
            </value>
            <value>
                <fullName>Replaced by credit</fullName>
            </value>
            <value>
                <fullName>Raised in error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>