blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/validationRules/Gate_fee_collection_due.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_fee_collection_due</fullName>
    <active>true</active>
    <description>Stage gate: Fee collection, Due and later stages need Due date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Scheduled", 1, "Due", 2, "Invoiced", 3, "Paid", 4, 0) &gt;= 2, ISBLANK(Due_date__c))</errorConditionFormula>
    <errorDisplayField>Due_date__c</errorDisplayField>
    <errorMessage>Fill in Due date before moving to Due.</errorMessage>
</ValidationRule>