blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/validationRules/Gate_fee_collection_invoiced.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_fee_collection_invoiced</fullName>
    <active>true</active>
    <description>Stage gate: Fee collection, Invoiced and later stages need Invoice reference.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Scheduled", 1, "Due", 2, "Invoiced", 3, "Paid", 4, 0) &gt;= 3, ISBLANK(Invoice_reference__c))</errorConditionFormula>
    <errorDisplayField>Invoice_reference__c</errorDisplayField>
    <errorMessage>Fill in Invoice reference before moving to Invoiced.</errorMessage>
</ValidationRule>