blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/validationRules/Gate_fee_collection_scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_fee_collection_scheduled</fullName>
    <active>true</active>
    <description>Stage gate: Fee collection, Scheduled and later stages need Amount and Trigger.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Scheduled", 1, "Due", 2, "Invoiced", 3, "Paid", 4, 0) &gt;= 1, OR(ISBLANK(Amount__c), ISBLANK(TEXT(Trigger__c))))</errorConditionFormula>
    <errorMessage>Fill in Amount and Trigger before moving to Scheduled.</errorMessage>
</ValidationRule>