blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/validationRules/Lost_fee_collection_waived.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_fee_collection_waived</fullName>
    <active>true</active>
    <description>Lost reason: Fee collection, Waived needs Waiver reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Waived"), ISBLANK(TEXT(Waiver_reason__c)))</errorConditionFormula>
    <errorDisplayField>Waiver_reason__c</errorDisplayField>
    <errorMessage>Fill in Waiver reason before closing this as Waived.</errorMessage>
</ValidationRule>