blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/listViews/Instalments_to_invoice.listView-meta.xml
<ListView>
    <fullName>Instalments_to_invoice</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Due_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Due</value>
    </filters>
    <label>Instalments to invoice</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>