blueprints/executive-search/salesforce/force-app/main/default/objects/Fee_Instalment__c/listViews/Outstanding_fees.listView-meta.xml
<ListView>
    <fullName>Outstanding_fees</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Due_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Invoiced</value>
    </filters>
    <label>Outstanding fees</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>